[gd_scene load_steps=9 format=2]

[ext_resource path="res://assets/enemy/frog.png" type="Texture" id=1]
[ext_resource path="res://enemy/Froggy.gd" type="Script" id=2]
[ext_resource path="res://assets/audio/Froggy.wav" type="AudioStream" id=3]

[sub_resource type="Animation" id=1]
resource_name = "breathe"
length = 0.4
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0.1, 0.2, 0.3 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 1,
"values": [ 2, 3, 4 ]
}

[sub_resource type="Animation" id=2]
resource_name = "idle"
length = 0.1
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ 0 ]
}

[sub_resource type="Animation" id=3]
resource_name = "jump_down"
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ 6 ]
}

[sub_resource type="Animation" id=4]
resource_name = "jump_up"
length = 0.1
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ 5 ]
}

[sub_resource type="CircleShape2D" id=5]
radius = 9.04601

[node name="Froggy" type="KinematicBody2D" groups=[
"enemy",
]]
position = Vector2( 84.9487, 48.8599 )
scale = Vector2( 2.5, 2.5 )
script = ExtResource( 2 )
__meta__ = {
"_edit_group_": true
}
gravity = 750
jump = -500
speed = 200

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
playback_speed = 0.6
anims/breathe = SubResource( 1 )
anims/idle = SubResource( 2 )
anims/jump_down = SubResource( 3 )
anims/jump_up = SubResource( 4 )

[node name="Sprite" type="Sprite" parent="."]
position = Vector2( 1.7818, -1.24726 )
texture = ExtResource( 1 )
hframes = 7
frame = 6

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource( 5 )
one_way_collision = true

[node name="Timer" type="Timer" parent="."]

[node name="JumpTimer" type="Timer" parent="."]

[node name="Croack" type="AudioStreamPlayer2D" parent="."]
visible = false
stream = ExtResource( 3 )

[connection signal="animation_finished" from="AnimationPlayer" to="." method="_on_AnimationPlayer_animation_finished"]
[connection signal="timeout" from="Timer" to="." method="_on_Timer_timeout"]
[connection signal="timeout" from="JumpTimer" to="." method="_on_JumpTimer_timeout"]
